changes for router

--- a/views/layout.html
+++ b/views/layout.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>ACME</title>
-    <link rel="stylesheet"" href="/bootstrap/dist/css/bootstrap.css"" />
+    <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.css" />
   </head>
   <body>
     <div class="container">
