--- a/views/add.html
+++ b/views/add.html
@@ -1,6 +1,9 @@
 {% extends './layout.html' %}
 {% block content %}
 
-
+<form method="post">
+<input type="text" name="product">
+<input type="submit" value="Add">
+</form>
 
 {% endblock %}
